tests/baselines/reference/asyncGenerators.functionDeclaration.5.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.5.es6.ts(1,20): error TS1138: Parameter declaration expected.
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.5.es6.ts(1,20): error TS2304: Cannot find name 'yield'.
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.5.es6.ts(1,25): error TS1005: ';' expected.


==== tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.5.es6.ts (3 errors) ====
    async function * f(yield) {}
                       ~~~~~
!!! error TS1138: Parameter declaration expected.
                       ~~~~~
!!! error TS2304: Cannot find name 'yield'.
                            ~
!!! error TS1005: ';' expected.